# Global-Risk-Decision-Intelligence-Platform

./: .gitignore  PROJECT_GUIDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: data_sources.py  health.py  mock_data.py  weather.py
backend/app/core/: config.py  database.py
backend/app/models/: data_source.py
backend/app/schemas/: data_source.py  mock_data.py  weather.py
backend/app/services/: data_source_service.py  mock_data_service.py  open_meteo_client.py  weather_service.py
backend/tests/: test_config.py  test_data_sources.py  test_health.py  test_mock_data.py  test_weather.py
data/mock/: agriculture_signals.json  country_baselines.json  economy_context_signals.json  energy_signals.json  weather_signals.json
docs/: architecture.md  data-source-registry.md  mock-data-pipeline.md  mvp-scope.md  real-weather-integration.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: health.ts
frontend/src/types/: health.ts
